src/main/kotlin/com/example/hierarchical_infolearn/global/error/data/BindErrorResponse.kt
package com.example.hierarchical_infolearn.global.error.data

import org.springframework.http.HttpStatus

data class BindErrorResponse(
    val status: HttpStatus,
    val fieldError: List<Map<String, String?>>
)